--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -20,24 +20,26 @@
 - id: computing-modular-forms
   title: Computing classical modular forms
   published: false
-  coauthors: [<a href="https://people.maths.bris.ac.uk/~jb12407/">Jonathan Bober</a>, <a href="https://people.maths.bris.ac.uk/~maarb/">Andrew R. Booker</a>, <a href="https://math.mit.edu/~edgarc/">Edgar Costa</a>, <a href="http://homepages.warwick.ac.uk/~masgaj/">John Cremona</a>, <a href="http://www.maartenderickx.nl/">Maarten Derickx</a>, <a href="https://davidlowryduda.com/">David Lowry-Duda</a>, <a href="https://people.maths.bris.ac.uk/~ml14850/">Min Lee</a>, <a href="http://math.mit.edu/~roed/">David Roe</a>, <a href="https://math.mit.edu/~drew/">Andrew V. Sutherland</a>, <a href="https://math.dartmouth.edu/~jvoight/">John Voight</a>]
+  coauthors: ['<a href="https://people.maths.bris.ac.uk/~jb12407/">Jonathan Bober</a>', '<a href="https://people.maths.bris.ac.uk/~maarb/">Andrew R. Booker</a>', '<a href="https://math.mit.edu/~edgarc/">Edgar Costa</a>', '<a href="http://homepages.warwick.ac.uk/~masgaj/">John Cremona</a>', '<a href="http://www.maartenderickx.nl/">Maarten Derickx</a>', '<a href="https://davidlowryduda.com/">David Lowry-Duda</a>', '<a href="https://people.maths.bris.ac.uk/~ml14850/">Min Lee</a>', '<a href="http://math.mit.edu/~roed/">David Roe</a>', '<a href="https://math.mit.edu/~drew/">Andrew V. Sutherland</a>', '<a href="https://math.dartmouth.edu/~jvoight/">John Voight</a>']
   arxiv: 2002.04717
 
 - id: recent-padic
   title: Two Recent p-adic Approaches Towards the (effective) Mordell Conjecture
   published: false
-  coauthors: [<a href="http://math.bu.edu/people/jbala/">Jennifer Balakrishnan</a>, <a href="http://people.maths.ox.ac.uk/bianchi/">Francesca Bianchi</a>, <a href="https://math.uchicago.edu/~brianrl/">Brian Lawrence</a>, <a href="https://www.rug.nl/staff/steffen.muller/">Steffen Müller</a>, <a href="https://ngtriant.github.io/">Nicholas Triantafillou</a>, <a href="https://www.math.ias.edu/~vonk/">Jan Vonk</a>]
+  coauthors: ['<a href="http://math.bu.edu/people/jbala/">Jennifer Balakrishnan</a>', '<a href="http://people.maths.ox.ac.uk/bianchi/">Francesca Bianchi</a>', '<a href="https://math.uchicago.edu/~brianrl/">Brian Lawrence</a>', '<a href="https://www.rug.nl/staff/steffen.muller/">Steffen Müller</a>', '<a href="https://ngtriant.github.io/">Nicholas Triantafillou</a>', '<a href="https://www.math.ias.edu/~vonk/">Jan Vonk</a>']
   arxiv: 1910.12755
 
 - id: coleman-larger
   title: Explicit Coleman Integration in Larger Characteristic
   published: true
+  journal: Proceedings of the Thirteenth Algorithmic Number Theory Symposium
   arxiv: 1806.03393
   doi: 10.2140/obs.2019.2.85
 
 - id: zeta-larger
   title: Computing Zeta Functions of Cyclic Covers in Large Characteristic
   published: true
-  coauthors: [<a href="http://math.mit.edu/~varul/">Vishal Arul</a>, <a href="https://math.mit.edu/~edgarc/">Edgar Costa</a>, <a href="http://math.bu.edu/people/rmagner/">Richard Magner</a>, <a href="https://ngtriant.github.io/">Nicholas Triantafillou</a>]
+  journal: Proceedings of the Thirteenth Algorithmic Number Theory Symposium
+  coauthors: ['<a href="http://math.mit.edu/~varul/">Vishal Arul</a>', '<a href="https://math.mit.edu/~edgarc/">Edgar Costa</a>', '<a href="http://math.bu.edu/people/rmagner/">Richard Magner</a>', '<a href="https://ngtriant.github.io/">Nicholas Triantafillou</a>']
   arxiv: 1806.02262
   doi: 10.2140/obs.2019.2.37
