--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -30,6 +30,7 @@
   title: Two Recent p-adic Approaches Towards the (effective) Mordell Conjecture
   published: true
   journal: Arithmetic L-Functions and Differential Geometric Methods, Regulators IV, May 2016, Paris
+  doi: 10.1007/978-3-030-65203-6_2
   coauthors: ['<a href="http://math.bu.edu/people/jbala/">Jennifer Balakrishnan</a>', '<a href="http://people.maths.ox.ac.uk/bianchi/">Francesca Bianchi</a>', '<a href="https://math.uchicago.edu/~brianrl/">Brian Lawrence</a>', '<a href="https://www.rug.nl/staff/steffen.muller/">Steffen Müller</a>', '<a href="https://ngtriant.github.io/">Nicholas Triantafillou</a>', '<a href="https://www.math.ias.edu/~vonk/">Jan Vonk</a>']
   arxiv: 1910.12755
 
