--- a/_data/coauthors.yml
+++ b/_data/coauthors.yml
@@ -82,3 +82,20 @@ arul:
 magner:
   name: Richard Magner
   website: "http://math.bu.edu/people/rmagner/"
+kumpitsch:
+  name: Theresa Kumpitsch
+  website: "https://www.uni-frankfurt.de/73082540/M_Sc__Theresa_Kumpitsch"
+ludtke:
+  name: Martin Lüdtke
+  website: "https://www.uni-frankfurt.de/61379381/Dr__Martin_L%C3%BCdtke"
+mcandrew:
+  name: Angus McAndrew
+  website: "https://math.bu.edu/people/angusmca/"
+qian:
+  name: Lie Qian
+  website: "https://mathematics.stanford.edu/people/lie-qian"
+studnia:
+  name: Elie Studnia
+xu:
+  name: Yujie Xu
+  website: "https://www.math.harvard.edu/people/xu-yujie/"
