--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -1,3 +1,8 @@
+- id: lean-mordell
+  title: Formalized Class Group Computations and Integral Points on Mordell Elliptic Curves
+  coauthors: [baanen, coppola, dahmen]
+  published: false
+
 - id: S-unit
   title: Refined Selmer Equations for the Thrice-Punctured Line in depth two
   coauthors: [betts, kumpitsch, ludtke, mcandrew, qian, studnia, xu]
