--- a/_data/coauthors.yml
+++ b/_data/coauthors.yml
@@ -101,3 +101,12 @@ studnia:
 xu:
   name: Yujie Xu
   website: "https://www.math.harvard.edu/people/xu-yujie/"
+coppola:
+  name: Nirvana Coppola
+  website: "https://sites.google.com/view/nirvanacoppola/home"
+dahmen:
+  name: Sander Dahmen
+  website: "https://www.few.vu.nl/~sdn249/"
+baanen:
+  name: Anne Bannen
+  website: "https://www.cs.vu.nl/~tbn305/"
