--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -2,6 +2,7 @@
   title: Formalized Class Group Computations and Integral Points on Mordell Elliptic Curves
   coauthors: [baanen, coppola, dahmen]
   published: false
+  arxiv: 2209.15492
 
 - id: S-unit
   title: Refined Selmer Equations for the Thrice-Punctured Line in depth two
