--- a/_data/coauthors.yml
+++ b/_data/coauthors.yml
@@ -108,5 +108,5 @@ dahmen:
   name: Sander Dahmen
   website: "https://www.few.vu.nl/~sdn249/"
 baanen:
-  name: Anne Bannen
+  name: Anne Baanen
   website: "https://www.cs.vu.nl/~tbn305/"
