--- a/_data/talks.yml
+++ b/_data/talks.yml
@@ -23,7 +23,7 @@
   title: Formalized Class Group Computations and Integral Points on Mordell Elliptic Curves
   venue: Certified Programs and Proofs
   venue-link: https://popl23.sigplan.org/home/CPP-2023
-  date: January 2023, upcoming
+  date: January 2023
   expository: false
 
 - id: hannover
