--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -49,6 +49,7 @@
   journal: Arithmetic geometry, number theory, and computation, Simons Symposia
   arxiv: 2002.04717
   doi: 10.1007/978-3-030-80914-0_4
+  errata: https://math.mit.edu/~drew/cmfs-mf-errata.pdf
 
 - id: recent-padic
   title: Two Recent p-adic Approaches Towards the (effective) Mordell Conjecture
