--- a/_data/coauthors.yml
+++ b/_data/coauthors.yml
@@ -110,3 +110,11 @@ dahmen:
 baanen:
   name: Anne Baanen
   website: "https://www.cs.vu.nl/~tbn305/"
+birkbeck:
+  name: Christopher Birkbeck
+  website: "https://cdbirkbeck.wixsite.com/website"
+brasca:
+  name: Riccardo Brasca
+  website: "https://webusers.imj-prg.fr/~riccardo.brasca/"
+rodriguez:
+  name: Eric Rodriguez
