--- a/_data/coauthors.yml
+++ b/_data/coauthors.yml
@@ -117,4 +117,4 @@ brasca:
   name: Riccardo Brasca
   website: "https://webusers.imj-prg.fr/~riccardo.brasca/"
 rodriguez:
-  name: Eric Rodriguez
+  name: Eric Rodriguez Boidi
