--- a/_data/talks.yml
+++ b/_data/talks.yml
@@ -51,6 +51,7 @@
   venue: London Learning Lean seminar
   venue-link: https://researchseminars.org/seminar/LondonLearningLean
   date: February 2023
+  video: https://www.youtube.com/watch?v=3IkyMyxyQcM&list=PLVZep5wTamMmqv34JnrNC2AgjfPoh_LN8&index=23
   expository: false
   slides: talks/lll/
 
@@ -174,6 +175,14 @@
   date: 2/7/19
   slides: "talks/journees/slides_h.pdf"
   expository: false
+  abstract: >
+    Coleman integration is a $p$-adic integration theory that provides a way integrate 1-forms on curves over $p$-adic fields.
+    The applications of this theory to arithmetic questions are varied, but include definitions of $p$-adic polylogarithms, explicit determination of rational points and torsion points on curves, and the computation of regulator maps in $K$-theory.
+
+    We will discuss the problem of computing these integrals in practice for special classes of interesting curves.
+    Via Monsky-Washnitzer cohomology this problem is related to that of computing zeta functions of curves over finite fields.
+    One can try to extend methods for computing the zeta function to also compute Coleman integrals, and so several algorithms can be found for Coleman integral computation.
+    We will also mention work in progress to use such computations as part of quadratic Chabauty to determine all rational points on interesting modular curves, in cases that were as far as we know not previously known.
 
 - id: keio
   title: Explicit computation with Coleman integrals
