--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,3 +1,3 @@
 - id: icms
-  content: Together with <a href="https://faculty.fordham.edu/hmacbeth1/">Heather Macbeth</a> I will organise a session on <a href="https://proof-assistants-and-software-icms2024.github.io/">Interactions Between Proof Assistants and Mathematical Software</a> at the International Congress of Mathematical Software 22-25 July 2024, please submit an abstract if you are interested!
+  content: Together with <a href="https://faculty.fordham.edu/hmacbeth1/">Heather Macbeth</a> I am organising a session on <a href="https://proof-assistants-and-software-icms2024.github.io/">Interactions Between Proof Assistants and Mathematical Software</a> at the International Congress of Mathematical Software 22-25 July 2024, please submit an abstract if you are interested!
   date: 5/12/2023
