--- a/_data/talks.yml
+++ b/_data/talks.yml
@@ -15,6 +15,7 @@
   title: Formalization and Arithmetic Geometry; past, present, and future
   venue: VaNTAGe a virtual math seminar on open conjectures in number theory and arithmetic geometry
   venue-link: https://sites.google.com/view/vantageseminar
+  video: https://www.youtube.com/watch?v=fDYloeOjDVI
   expository: false
 
 
