--- a/_data/coauthors.yml
+++ b/_data/coauthors.yml
@@ -118,3 +118,7 @@ brasca:
   website: "https://webusers.imj-prg.fr/~riccardo.brasca/"
 rodriguez:
   name: Eric Rodriguez Boidi
+yang:
+  name: Andrew Yang
+vandevelde:
+  name: Ruben van de Velde
